--- a/Mitschrieb.tex
+++ b/Mitschrieb.tex
@@ -72,11 +72,11 @@ isPrime :: Integer -> Bool
 isPrime n = factors n == []
   where 
     factors :: Integer -> [Integer]
-    factors n = [ m ] | m <- [2..n-1], mod n m == 0]
+    factors n = [ m  | m <- [2..n-1], mod n m == 0]
 
 main :: IO ()
 main = do
-  let n =42
+  let n = 42
   print (isPrime n)
 \end{minted}
 \caption{isPrime in Haskell}
