der Forumbeitrag gehört nicht ins Inhaltsverzeichnis!

--- a/Mitschrieb.tex
+++ b/Mitschrieb.tex
@@ -320,7 +320,7 @@ let @$g_1$@ ... = @$b_1$@
 in e
 \end{minted}
 \end{enumerate}
-\section{Haskells 2-dimensionale Syntax (Layout) (Forumbeitrag)}
+\section*{Haskells 2-dimensionale Syntax (Layout) (Forumbeitrag)}
 \begin{mdframed}
 Hallo zusammen,\\
 in der dritten Vorlesung hatte ich erwähnt, dass Haskells Syntax darauf verzichtet, Blöcke (von Definitionen) mittels Sonderzeichen abzugrenzen und zu strukturieren. 
